src-ken&y/objects/SKID__c.object
<CustomObject>
    <customHelpPage>HelpSKIDAbout</customHelpPage>
    <description>Stock Keeping ID</description>
    <fields>
        <fullName>ASN_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ASN Line</label>
        <referenceTo>ASN_Line__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The specific bin in which the skid is going to be placed inside the location.</description>
        <label>Bin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Bin__c.Location__c</field>
                <operation>equals</operation>
                <valueField>$Source.Location__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Bin__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to company</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Component_Sequence__c</fullName>
        <description>Optional Sorting Sequence from Component__c Object.</description>
        <inlineHelpText>Optional Sorting Sequence</inlineHelpText>
        <label>Component Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <inlineHelpText>The component type is used to specify whether the component is to be kitted, backflushed, or is a by-product of previously manufactured finished goods.</inlineHelpText>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kit</fullName>
                </value>
                <value>
                    <fullName>Backflush</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consigned_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the owner of the consigned goods.</description>
        <label>Consigned Owner</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Container_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Container Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>SKIDs (Container Item)</relationshipLabel>
        <relationshipName>Container_Item_SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Quantity__c</fullName>
        <description>Quantity counted at last cycle count</description>
        <label>Count Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Picker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that is currently picking the planned skid.</description>
        <label>Current Picker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SKIDs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>the date this inventory is received on.</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <description>Created to store the attribute value</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Input_Quantity__c</fullName>
        <description>Input field for Quantity on visualforce pages. Scratch Field.</description>
        <inlineHelpText>Quantity to be transferred from one location to the other.</inlineHelpText>
        <label>Transfer Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Demand__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>A checkmark indicates that this is a Demand SKID.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Active__c</fullName>
        <description>Is the item active or not</description>
        <formula>IF(Item__r.Active__c,&apos;Yes&apos;,&apos;No&apos; )</formula>
        <label>Item Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Lead_Time__c</fullName>
        <description>Item lead time</description>
        <formula>Item__r.Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Source__c</fullName>
        <description>Used on the MRP</description>
        <formula>TEXT(Item__r.Source__c)</formula>
        <label>Item Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_UOM__c</fullName>
        <formula>Item__r.Stocking_UOM__r.Name</formula>
        <label>Item UOM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Labor_Tracking_Operation_Sequence__c</fullName>
        <formula>Labor_Tracking__r.Operation_Sequence__c</formula>
        <label>Operation Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Tracking_Resource_Sequence__c</fullName>
        <formula>Labor_Tracking__r.Resource_Sequence__c</formula>
        <label>Resource Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Labor_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Labor Tracking</description>
        <inlineHelpText>Lookup to Labor Tracking</inlineHelpText>
        <label>Labor Tracking</label>
        <referenceTo>Labor_Tracking__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>License_Plate_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Plate Number</label>
        <referenceTo>LPN__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to location</description>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <description>Lot Number of the item in this SKID</description>
        <label>Lot Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The lot to which the quantity in the skid belongs to.</description>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MRP_Nettable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can this SKID be used in MRP ?</description>
        <inlineHelpText>A checkmark indicates that the SKID can be used in MRP.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material Tracking</label>
        <referenceTo>Material_Tracking__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mixed_Palletized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mixed Palletized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_Hyperlink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id, Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <description>Date of demand or supply</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line</label>
        <referenceTo>Order_Line__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaging_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Packaging UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>SKIDs (Packaging UOM)</relationshipLabel>
        <relationshipName>SKIDs_Packaging_UOM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is populated with the user id assigned for picking the planned skid.</description>
        <label>Picker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Key_At_Location__c</fullName>
        <description>If filled in (for skids that are used for tracking), this must be unique key and is filled when the skid is placed at that location, in order to avoid creating multiple skids with same tracking criteria at that location.</description>
        <inlineHelpText>Used for tracking SKIDS. A unique key that is populated  when the SKID is placed at that location. This avoids multiple skids with same tracking criteria at that location.</inlineHelpText>
        <label>Primary Key At Location</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The purchase order line that matched in Receiving</description>
        <label>Purchase Order Line</label>
        <referenceTo>Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Allocated__c</fullName>
        <description>Enter the quantity to allocate to the sales order line.</description>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Available__c</fullName>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Issued__c</fullName>
        <description>Quantity of this Component issued to the Work Order</description>
        <label>Quantity Issued</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Required__c</fullName>
        <description>Quantity Required on this Component on the Work Order</description>
        <label>Quantity Required</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Scrapped__c</fullName>
        <description>Quantity of this Component scrapped on the Work Order</description>
        <label>Quantity Scrapped</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Short__c</fullName>
        <description>Quantity Short of this Component on the Work Order</description>
        <label>Quantity Short</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Stocking_UOM__c</fullName>
        <description>Quantity represented in Packaging UOM</description>
        <label>Quantity (Stocking UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_To_Return__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity to Return at WO De-Kit - this field is not stored.</description>
        <label>Quantity To Return</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Used__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity that has been completed.</description>
        <label>Quantity Used</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity of the item in this SKID</description>
        <label>Quantity (Packaging UOM)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Issue__c</fullName>
        <description>Quantity to issue at WO Kit - this field is not stored.</description>
        <label>Quantity to Issue</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_to_Scrap__c</fullName>
        <description>Quantity to scrap at WO component scrap - this field is not stored.</description>
        <label>Quantity to Scrap</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receipt_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt Line</label>
        <referenceTo>Receipt_Line__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Sales Order Line when type is SO Demand</description>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scanned_For_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Scanned For Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scanned_for_Pick__c</fullName>
        <description>Used to store the cases scanned for picking</description>
        <label>Scanned for Pick</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Shipment_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shipment Line for which this skid is assigned to.</description>
        <label>Shipment Line</label>
        <referenceTo>Shipment_Line__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stocking_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stocking UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temporary_LPN_Holder__c</fullName>
        <description>temporary field that is used by the UI</description>
        <inlineHelpText>temporary field that is used by the UI</inlineHelpText>
        <label>Temporary LPN Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temporary_Value_Holder1__c</fullName>
        <label>Temporary Value Holder1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temporary_Value_Holder__c</fullName>
        <label>Temporary Value Holder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Material__c</fullName>
        <description>Total Material amount of the component issued to the work order</description>
        <inlineHelpText>Total material amount of the item issued in the associated work order.</inlineHelpText>
        <label>Total Material</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>SKID Type delineates where the SKID is at in its life cycle</description>
        <inlineHelpText>SKID type reveals the state of the SKID in its lifecycle.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Forecast Demand</fullName>
                </value>
                <value>
                    <fullName>SO Demand</fullName>
                </value>
                <value>
                    <fullName>WOM Demand</fullName>
                </value>
                <value>
                    <fullName>WO Supply</fullName>
                </value>
                <value>
                    <fullName>PO Supply</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                    <default>true</default>
                </value>
                <value>
               		<fullName>Planned Pick</fullName>
                 </value>
                 <value>
                     <fullName>Draft In-Transit</fullName>
                 </value>
                 <value>
                     <fullName>TO Supply</fullName>
                 </value>
                 <value>
                     <fullName>In-Transit</fullName>
                 </value>
                 <value>
                     <fullName>Allocated</fullName>
                 </value>
                 <value>
                     <fullName>TO Demand</fullName>
                 </value>
                 <value>
                     <fullName>WIP</fullName>
                 </value>
                 <value>
                     <fullName>Install Base</fullName>
                 </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Work order related to the on order SKID</description>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipLabel>SKIDs</relationshipLabel>
        <relationshipName>SKIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>SKID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Item__c</columns>
        <columns>Type__c</columns>
        <columns>Location__c</columns>
        <columns>Quantity__c</columns>
        <columns>Packaging_UOM__c</columns>
        <columns>Consigned_Owner__c</columns>
        <columns>Lot__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Bin__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Purchase_Order_Line__c</columns>
        <columns>Sales_Order_Line__c</columns>
        <columns>Work_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Non_Nettable_location_skids</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Item__c</columns>
        <columns>Quantity__c</columns>
        <columns>Company__c</columns>
        <columns>Location__c</columns>
        <columns>Lot__c</columns>
        <columns>Bin__c</columns>
        <columns>Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Location</value>
        </filters>
        <label>Non-Nettable location skids</label>
    </listViews>
    <nameField>
        <label>SKID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SKIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Company_must_be_populated</fullName>
        <active>true</active>
        <description>Company must be populated on the skid.</description>
        <errorConditionFormula>ISBLANK(Company__c) || ISNULL(Company__c)</errorConditionFormula>
        <errorDisplayField>Company__c</errorDisplayField>
        <errorMessage>Company value must be populated.</errorMessage>
    </validationRules>
</CustomObject>